# bubble-community

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  bubble-community.md  claude  docker-compose.yml  entrypoint.sh
backend/: .env.example  entrypoint.sh  gunicorn.conf.py  pyproject.toml
backend/app/: README.md  auth.py  config.py  db.py  http_client.py  main.py  official_bubbles.json  password_util.py  redis_client.py  schema.sql  seed.py  session.py  svg_util.py  tasks.py  ucenter.py
backend/app/modules/: __init__.py  announcement.py  announcement_confirmation.py  bubble.py  database.py  imported_bubble.py  repositories.py  role.py  session_model.py  user.py  user_current_bubble.py  user_favorite.py
backend/app/routers/: admin.py  announcement.py  auth.py  bubbles.py  user.py
backend/migrations/: 001_create_db.py  002_create_tables.py  003_schema.py  004_announcement_confirmations.py  005_hash_author_signature.py  runner.py
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
frontend/src/: App.vue  api.js  main.js  style.css
frontend/src/components/: BubbleCard.vue  BubbleList.vue  Editor.vue  Navbar.vue  Toast.vue
frontend/src/composables/: useDarkMode.js  useToast.js
frontend/src/data/: mockData.js
frontend/src/router/: index.js
frontend/src/stores/: auth.js
frontend/src/utils/: imgToSvg.js  svgHelper.js  toolBridge.js
frontend/src/views/: Admin.vue  Docs.vue  Home.vue  ImgToSvg.vue  Login.vue  Profile.vue  Register.vue
