[project]
name = "bubble-community-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.139.0",
    "pyjwt>=2.13.0",
    "pymysql>=1.2.0",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.50.2",
]
