[project]
name = "bubble-community-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.27.0",
    "aiomysql>=0.2.0",
    "pymysql>=1.2.0",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.50.2",
    "sqlalchemy>=2.0.0",
    "slowapi>=0.1.9",
    "itsdangerous>=2.0.0",
    "python-dotenv>=1.0.0",
    "redis[hiredis]>=7.0.0",
    "pyjwt>=2.0.0",
]
